# ScripTron

./: .gitignore  Cargo.toml  README_zh.md  TODO_HERMES_MIGRATION.md  build-linux.sh  build-macos.sh  docs_architecture_nodes.md  docs_native_swift_migration.md  docs_phase0_2_execution.md  docs_ui_system.md  docs_ui_task.md  package-lock.json  package.json  readme.md  rotate_pngs_90.py
.claude/: settings.json
.github/workflows/: build.yml  diary-rebuild.yml  diary-sync.yml
crates/agent-loop/: Cargo.toml
crates/agent-loop/src/: builtin_tools.rs  lib.rs  llm.rs
crates/auth/: Cargo.toml
crates/auth/src/: keychain.rs  lib.rs  pkce.rs
crates/cli-registry/: Cargo.toml
crates/cli-registry/src/: lib.rs
crates/hermes/: Cargo.toml
crates/hermes/src/: compression.rs  lib.rs  memory.rs  prompt.rs  provider.rs  runtime.rs  tools.rs  types.rs
crates/process-runner/: Cargo.toml
crates/process-runner/src/: lib.rs
crates/scriptron-cli/: Cargo.toml
crates/scriptron-cli/src/: main.rs
crates/scriptron-core/: Cargo.toml
crates/scriptron-core/src/: lib.rs
crates/scriptron-core/tests/: hermes_gateway_fake.rs  hermes_real_e2e.rs  workspace_project.rs
crates/scriptron-core/tests/fixtures/: fake-hermes
crates/scriptron-ffi/: Cargo.toml
crates/scriptron-ffi/src/: lib.rs
crates/tron-parser/: Cargo.toml
crates/tron-parser/src/: lib.rs
dailight/: README.md  generate.py  index.html
dailight/entries/: 2025-05-08.md  2025-05-09.md  2026-05-09.md
docs/: MVP_NEXT_TODO.md  UI_REFACTOR_PLAN.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-05-24-stage2-hermes-bridge-tests.md
docs/tronhub-templates/: README.md
docs/tronhub-templates/clis/example-tool-cli/: README.md  cli.json  install.sh  manifest.json  run.sh
docs/tronhub-templates/models/example-model-provider/: README.md  install.sh  manifest.json  model.json  run.sh
docs/tronhub-templates/skills/example-skill/: README.md  SKILL.md  skill.json
examples/: file_organizer.tron  monthly_hr_report.tron
macos/ScripTronNative/: Package.swift  README.md  build-native.sh  make-app.sh
macos/ScripTronNative/Sources/ScripTronNative/: AppModel.swift  DesignSystem.swift  HermesMigrationSupport.swift  PresentationModels.swift  ProjectStudioView.swift  RootView.swift  RustBridge.swift  ScripTronNativeApp.swift  WorkspaceView.swift
macos/ScripTronNative/Tests/ScripTronNativeTests/: HermesMigrationTests.swift  HermesStage2BridgeTests.swift  RustSwiftIntegrationTests.swift  UIBridgeDummyTests.swift
registry/archive-cli/: manifest.json
registry/excel-cli/: manifest.json
registry/hr-report-cli/: manifest.json
registry/pdf-cli/: manifest.json
scripts/ci/: assert-hermes-stage1.sh  assert-no-adaptive-skill.sh  assert-workflow.sh
scripts/dev/: install-hermes-e2e.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  state.rs
ui/: editor.js  index.html  main.js  marketplace.js  style.css
