[package]
name = "scriptron"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tron-parser = { path = "../crates/tron-parser" }
cli-registry = { path = "../crates/cli-registry" }
process-runner = { path = "../crates/process-runner" }
agent-loop = { path = "../crates/agent-loop" }
auth = { path = "../crates/auth" }
