[package]
name = "agent-loop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
cli-registry = { path = "../cli-registry" }
process-runner = { path = "../process-runner" }
tron-parser = { path = "../tron-parser" }
async-trait = "0.1"
