[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
