[package]
name = "scriptron-core"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-loop = { path = "../agent-loop" }
auth = { path = "../auth" }
cli-registry = { path = "../cli-registry" }
tron-parser = { path = "../tron-parser" }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
anyhow = { workspace = true }

