[package]
name = "scriptron-core"
version = "0.1.0"
edition = "2021"

[dependencies]
process-runner = { path = "../process-runner" }
tron-parser = { path = "../tron-parser" }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
