[package]
name = "scriptron-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "scriptron_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
scriptron-core = { path = "../scriptron-core" }
tron-parser = { path = "../tron-parser" }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
once_cell = "1"

